<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_gradient"
android:padding="32dp"
android:id="@+id/main"
tools:context=".LoginActivity">

<TextView
    android:id="@+id/login_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Login"
    android:textColor="@android:color/white"
    android:textSize="48sp"
    android:textStyle="bold"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@id/login_subtitle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_chainStyle="packed"
    app:layout_constraintTop_toTopOf="parent"/>

<TextView
    android:id="@+id/login_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Log in to continue."
    android:textColor="@android:color/white"
    android:textSize="18sp"
    app:layout_constraintTop_toBottomOf="@id/login_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    android:id="@+id/email_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="EMAIL"
    android:textColor="@android:color/white"
    android:textSize="16sp"
    android:layout_marginTop="64dp"
    android:layout_marginStart="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/login_subtitle"/>

<EditText
    android:id="@+id/et_email"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/rounded_edittext_background"
    android:hint="Email Address"
    android:paddingStart="20dp"
    android:textColor="@android:color/white"
    android:textColorHint="@android:color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/email_label" />

<TextView
    android:id="@+id/password_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="PASSWORD"
    android:textColor="@android:color/white"
    android:textSize="16sp"
    android:layout_marginTop="24dp"
    android:layout_marginStart="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_email"/>

<EditText
    android:id="@+id/et_password"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/rounded_edittext_background"
    android:hint="******"
    android:inputType="textPassword"
    android:paddingStart="20dp"
    android:textColor="@android:color/white"
    android:textColorHint="@android:color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/password_label"/>

<Button
    android:id="@+id/login_button"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:layout_marginTop="48dp"
    android:text="Login"
    android:textAllCaps="false"
    android:background="@drawable/rounded_button_background"
    android:textColor="@android:color/black"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_password"/>


    <Button
        android:id="@+id/btnBiometric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login with Biometrics"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"/>



    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBiometric"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Sign up"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>